--- a/Evolution_based.ipynb
+++ b/Evolution_based.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Evolution-based.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "108RQpVhIeONrVX8v3b7WNkDHWQga9Fqn",
-      "authorship_tag": "ABX9TyMsvc9t52XHOKBuBGwA9EzH",
+      "authorship_tag": "ABX9TyO5vRNeZ4o+sH6AvBCb9mkb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,8 +16,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -31,26 +31,186 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "GeA8fRWrm2XF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4218603-15f8-4b33-8531-b18df1ba227a"
+        "outputId": "7e1c29d1-848d-4391-be09-23d06b78cf5b"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "hello\n"
+            "TensorFlow 1.x selected.\n",
+            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+            "100  498M  100  498M    0     0   119M      0  0:00:04  0:00:04 --:--:--  119M\n",
+            "Cloning into 'nasbench'...\n",
+            "remote: Enumerating objects: 96, done.\u001b[K\n",
+            "remote: Total 96 (delta 0), reused 0 (delta 0), pack-reused 96\u001b[K\n",
+            "Unpacking objects: 100% (96/96), done.\n",
+            "Processing ./nasbench\n",
+            "\u001b[33m  DEPRECATION: A future pip version will change local packages to be built in-place without first copying to a temporary directory. We recommend you use --use-feature=in-tree-build to test your packages with this new behavior before it becomes the default.\n",
+            "   pip 21.3 will remove support for this functionality. You can find discussion regarding this at https://github.com/pypa/pip/issues/7555.\u001b[0m\n",
+            "Requirement already satisfied: tensorflow>=1.12.0 in /tensorflow-1.15.2/python3.7 (from nasbench==1.0) (1.15.2)\n",
+            "Requirement already satisfied: numpy<2.0,>=1.16.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (1.21.5)\n",
+            "Requirement already satisfied: protobuf>=3.6.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (3.17.3)\n",
+            "Requirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (1.14.0)\n",
+            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (1.44.0)\n",
+            "Requirement already satisfied: tensorflow-estimator==1.15.1 in /tensorflow-1.15.2/python3.7 (from tensorflow>=1.12.0->nasbench==1.0) (1.15.1)\n",
+            "Collecting gast==0.2.2\n",
+            "  Downloading gast-0.2.2.tar.gz (10 kB)\n",
+            "Requirement already satisfied: google-pasta>=0.1.6 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (0.2.0)\n",
+            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (1.1.2)\n",
+            "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (3.3.0)\n",
+            "Requirement already satisfied: absl-py>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (1.0.0)\n",
+            "Requirement already satisfied: tensorboard<1.16.0,>=1.15.0 in /tensorflow-1.15.2/python3.7 (from tensorflow>=1.12.0->nasbench==1.0) (1.15.0)\n",
+            "Requirement already satisfied: keras-applications>=1.0.8 in /tensorflow-1.15.2/python3.7 (from tensorflow>=1.12.0->nasbench==1.0) (1.0.8)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (1.1.0)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (0.37.1)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (1.15.0)\n",
+            "Requirement already satisfied: astor>=0.6.0 in /usr/local/lib/python3.7/dist-packages (from tensorflow>=1.12.0->nasbench==1.0) (0.8.1)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.7/dist-packages (from keras-applications>=1.0.8->tensorflow>=1.12.0->nasbench==1.0) (3.1.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.7/dist-packages (from tensorboard<1.16.0,>=1.15.0->tensorflow>=1.12.0->nasbench==1.0) (3.3.6)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.7/dist-packages (from tensorboard<1.16.0,>=1.15.0->tensorflow>=1.12.0->nasbench==1.0) (57.4.0)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.7/dist-packages (from tensorboard<1.16.0,>=1.15.0->tensorflow>=1.12.0->nasbench==1.0) (1.0.1)\n",
+            "Requirement already satisfied: importlib-metadata>=4.4 in /usr/local/lib/python3.7/dist-packages (from markdown>=2.6.8->tensorboard<1.16.0,>=1.15.0->tensorflow>=1.12.0->nasbench==1.0) (4.11.3)\n",
+            "Requirement already satisfied: zipp>=0.5 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard<1.16.0,>=1.15.0->tensorflow>=1.12.0->nasbench==1.0) (3.8.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.4 in /usr/local/lib/python3.7/dist-packages (from importlib-metadata>=4.4->markdown>=2.6.8->tensorboard<1.16.0,>=1.15.0->tensorflow>=1.12.0->nasbench==1.0) (4.1.1)\n",
+            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from h5py->keras-applications>=1.0.8->tensorflow>=1.12.0->nasbench==1.0) (1.5.2)\n",
+            "Building wheels for collected packages: nasbench, gast\n",
+            "  Building wheel for nasbench (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for nasbench: filename=nasbench-1.0-py3-none-any.whl size=46788 sha256=4b7a0336145b76a8104655f76a6e80e73eec3f04b58d9c303ee9f8a523a36326\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-4trvmej2/wheels/64/e0/f5/7eabfceccbb11fce1ab5888a8d31f59fcb43f2b5cfc53ba6d7\n",
+            "  Building wheel for gast (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for gast: filename=gast-0.2.2-py3-none-any.whl size=7554 sha256=5db705d7caf65863722f52f38f6f56dc2ab9d66e4b954ab5e34739f8a2a96a55\n",
+            "  Stored in directory: /root/.cache/pip/wheels/21/7f/02/420f32a803f7d0967b48dd823da3f558c5166991bfd204eef3\n",
+            "Successfully built nasbench gast\n",
+            "Installing collected packages: gast, nasbench\n",
+            "  Attempting uninstall: gast\n",
+            "    Found existing installation: gast 0.5.3\n",
+            "    Uninstalling gast-0.5.3:\n",
+            "      Successfully uninstalled gast-0.5.3\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "kapre 0.3.7 requires tensorflow>=2.0.0, but you have tensorflow 1.15.2 which is incompatible.\u001b[0m\n",
+            "Successfully installed gast-0.2.2 nasbench-1.0\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/nasbench/lib/training_time.py:130: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/nasbench/lib/training_time.py:174: The name tf.train.CheckpointSaverListener is deprecated. Please use tf.estimator.CheckpointSaverListener instead.\n",
+            "\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/nasbench/lib/evaluate.py:30: The name tf.train.NanLossDuringTrainingError is deprecated. Please use tf.estimator.NanLossDuringTrainingError instead.\n",
+            "\n",
+            "Loading dataset from file... This may take a few minutes...\n",
+            "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/nasbench/api.py:146: tf_record_iterator (from tensorflow.python.lib.io.tf_record) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use eager execution and: \n",
+            "`tf.data.TFRecordDataset(path)`\n",
+            "Loaded dataset in 71 seconds\n"
           ]
         }
       ],
       "source": [
-        "print(\"hello\")"
+        "%tensorflow_version 1.x\n",
+        "!curl -O https://storage.googleapis.com/nasbench/nasbench_only108.tfrecord\n",
+        "!git clone https://github.com/google-research/nasbench\n",
+        "!pip install ./nasbench\n",
+        "from nasbench import api\n",
+        "nasbench = api.NASBench('nasbench_only108.tfrecord')"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import copy\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import random\n",
+        "\n",
+        "INPUT = 'input'\n",
+        "OUTPUT = 'output'\n",
+        "CONV3X3 = 'conv3x3-bn-relu'\n",
+        "CONV1X1 = 'conv1x1-bn-relu'\n",
+        "MAXPOOL3X3 = 'maxpool3x3'\n",
+        "NUM_VERTICES = 7\n",
+        "MAX_EDGES = 9\n",
+        "EDGE_SPOTS = NUM_VERTICES * (NUM_VERTICES - 1) / 2\n",
+        "OP_SPOTS = NUM_VERTICES - 2 \n",
+        "ALLOWED_OPS = [CONV3X3, CONV1X1, MAXPOOL3X3]\n",
+        "ALLOWED_EDGES = [0, 1] "
+      ],
+      "metadata": {
+        "id": "T23QXdFYkVLZ"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def random_spec():\n",
+        "  while True:\n",
+        "    matrix = np.random.choice(ALLOWED_EDGES, size=(NUM_VERTICES, NUM_VERTICES))\n",
+        "    matrix = np.triu(matrix, 1)\n",
+        "    ops = np.random.choice(ALLOWED_OPS, size=(NUM_VERTICES)).tolist()\n",
+        "    ops[0] = INPUT\n",
+        "    ops[-1] = OUTPUT\n",
+        "    spec = api.ModelSpec(matrix=matrix, ops=ops)\n",
+        "    if nasbench.is_valid(spec):\n",
+        "      return spec\n"
+      ],
+      "metadata": {
+        "id": "MgZcWGxNqeVN"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mutate_spec(old_spec):\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "ixPPjcpa2VeP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def run_evolution_search(cycles = 20000, population_size = 50, tournament_size = 10):\n",
+        "  nasbench.reset_budget_counters()\n",
+        "  population = []\n",
+        "  history = []\n",
+        "  for _ in range(population_size):\n",
+        "    spec = random_spec()\n",
+        "    data = nasbench.query(spec)\n",
+        "    population.append((data['validation_accuracy'], spec))\n",
+        "    history.append((data['validation_accuracy'], spec))\n",
+        "  while len(history) < cycles:\n",
+        "    sample = []\n",
+        "    while len(sample) < tournament_size:\n",
+        "      candidate = np.random_choice(population)\n",
+        "      sample.append(candidate)\n",
+        "    parent = max(sample)\n",
+        "    child_spec = mutate_spec(parent[1])\n",
+        "    child_data = nasbench.query(child_spec)\n",
+        "    child = (child_data['validation_accuracy'], child_spec)\n",
+        "    population.append(child)\n",
+        "    history.append(child)\n",
+        "    population.pop(0)\n",
+        "  \n",
+        "  return history\n"
+      ],
+      "metadata": {
+        "id": "tQWRROFe2UVJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
