--- a/Evolution_based.ipynb
+++ b/Evolution_based.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "108RQpVhIeONrVX8v3b7WNkDHWQga9Fqn",
-      "authorship_tag": "ABX9TyO5vRNeZ4o+sH6AvBCb9mkb",
+      "authorship_tag": "ABX9TyMJzDbePXL/wLljU3ffk6jI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,7 @@
       "metadata": {
         "id": "T23QXdFYkVLZ"
       },
-      "execution_count": 2,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -88,19 +88,45 @@
       "metadata": {
         "id": "MgZcWGxNqeVN"
       },
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def mutate_spec(old_spec):\n",
-        "  "
+        "  while True:\n",
+        "    new_matrix = copy.deepcopy(old_spec.original_matrix)\n",
+        "    new_ops = copy.deepcopy(old_spec.original_ops)\n",
+        "    opt = random.randint(0, 1)\n",
+        "    if opt == 0:\n",
+        "      ind = random.randint(1, NUM_VERTICES - 2)\n",
+        "      available = [o for o in nasbench.config['available_ops'] if o != new_ops[ind]]\n",
+        "      new_ops[ind] = random.choice(available)\n",
+        "    else :\n",
+        "      while True:\n",
+        "        ones = []\n",
+        "        zeros = []\n",
+        "        src = random.randint(0, NUM_VERTICES - 2)\n",
+        "        for dst in range(src + 1, NUM_VERTICES - 1):\n",
+        "          if new_matrix[src][dst] == 0 :\n",
+        "            zeros.append(dst)\n",
+        "          else :\n",
+        "            ones.append(dst)\n",
+        "        if zeros and ones :\n",
+        "          one = random.choice(zeros)\n",
+        "          zero = random.choice(ones)\n",
+        "          new_matrix[src][one] = 1\n",
+        "          new_matrix[src][zero] = 0\n",
+        "          break\n",
+        "    new_spec = api.ModelSpec(new_matrix, new_ops)\n",
+        "    if nasbench.is_valid(new_spec):\n",
+        "      return new_spec"
       ],
       "metadata": {
         "id": "ixPPjcpa2VeP"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -118,9 +144,9 @@
         "  while len(history) < cycles:\n",
         "    sample = []\n",
         "    while len(sample) < tournament_size:\n",
-        "      candidate = np.random_choice(population)\n",
+        "      candidate = random.choice(population)\n",
         "      sample.append(candidate)\n",
-        "    parent = max(sample)\n",
+        "    parent = max(sample, key = lambda i:i[0])\n",
         "    child_spec = mutate_spec(parent[1])\n",
         "    child_data = nasbench.query(child_spec)\n",
         "    child = (child_data['validation_accuracy'], child_spec)\n",
@@ -132,6 +158,17 @@
       ],
       "metadata": {
         "id": "tQWRROFe2UVJ"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "output = run_evolution_search()\n"
+      ],
+      "metadata": {
+        "id": "dmk4qcx7Uxmf"
       },
       "execution_count": null,
       "outputs": []
